tests/checker/ok/commutative_non_canonical_receiver.ow
Greeting = String

Name = String

greet = (Greeting * Name) -> Greeting {
    Greeting
}

main = () -> Unit {
    Name("world").greet(Greeting("hello"))
    "ok".print()
}
