tests/checker/fail/union_variants_out_of_order.ow
Apple = String

Banana = String

Cherry = String

Fruit = Cherry + Banana + Apple

main = () -> Unit {
    "ok".print()
}
